-- Multiidioma en jsp's
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/branch-2.1@158 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_ca.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_ca.properties
@@ -7,14 +7,100 @@ expedient.consulta.i=i
 expedient.consulta.tipusexpedient=Tipus d'expedient
 expedient.consulta.select.tipusexpedient=Seleccioni un tipus d'expedient
 expedient.consulta.select.estat=Seleccioni un estat
+expedient.consulta.select.consula=Seleccioni una consulta
 expedient.consulta.estat=Estat
 expedient.consulta.entre=Entre
 expedient.consulta.consultar=Consultar
 expedient.consulta.netejar=Netejar
+expedient.consulta.cons_general=Consulta general
+expedient.consulta.cons_disseny=Consultes de disseny
+expedient.consulta.consulta=Consulta
+expedient.consulta.iniciat=Iniciat
+expedient.consulta.finalitzat=Finalitzat
+expedient.consulta.canviar=Canviar
+expedient.dada.afegir_dada=Afegir dada
+expedient.dada.select.variable=Seleccioni una variable
+expedient.dada.variable=Variable
+expedient.dada.nova_variable=Codi de la nova variable
+expedient.dada.modificar_variable=Anar a modificar la variable?
+expedient.dada.modificar_dada=Modificar dada
+expedient.dada.dades_proces=Dades del procés
+expedient.dada.afegir_dada_proces=Afegir nova dada al procés
+expedient.dada.dades_tasques=Dades de les tasques
+expedient.dada.afegir_dada_tasca=Afegir nova dada a la tasca
+expedient.document.adjuntar=Adjuntar nou document
+expedient.document.modificar_adjunt=Modificar document adjunt
+expedient.document.titol=Títol
+expedient.document.arxiu=Arxiu
+expedient.document.data=Data
+expedient.document.modificar=Modificar document
+expedient.document.adjunt=Document adjunt
+expedient.document.document=Document
+expedient.document.documents_proces=Documents del procés
+expedient.document.adjuntar_document_proces=Adjuntar document al procés
+expedient.document.confirm_esborrar_proces=Estau segur que voleu esborrar aquest document del procés?
+expedient.document.confirm_esborrar_tasca=Estau segur que voleu esborrar aquest document de la tasca?
+expedient.document.confirm_modificar_documents=Es podran modificar documents ja introduïts. Voleu continuar?
+expedient.document.confirm_esborrar_signatures=Estau segur que voleu esborrar TOTES les signatures d'aquest document?
+expedient.document.verif_signatures=Verificació de signatures
+expedient.document.info_registre=Informació de registre
+expedient.editar.informacio=Modificar informació de l'expedient
+expedient.editar.iniciador=Iniciador
+expedient.editar.entrada_num=Entrada núm.
+expedient.editar.responsable=Responsable
+expedient.editar.comentari=Comentari
+expedient.editar.estat=Estat
+expedient.eines.confirm_aturar_tramitacio=Estau segur que voleu aturar la tramitació d'aquest expedient?
+expedient.eines.confirm_reprendre_tramitacio=Estau segur que voleu reprendre la tramitació d'aquest expedient?
+expedient.eines.confirm_executar_script_proces=Estau segur que voleu executar aquest script en aquest procés?
+expedient.eines.confirm_canviar_versio_proces=Estau segur que voleu canviar la versió d'aquest procés?
+expedient.eines.aturar_tramitacio=Aturar la tramitació de l'expedient
+expedient.eines.reprendre_tramitacio=Reprendre la tramitació de l'expedient
+expedient.eines.motiu=Motiu
+expedient.eines.execucio_scripts=Execució d'scripts
+expedient.eines.script=Script
+expedient.eines.canviar_versio_proces=Canviar la versió del procés
+expedient.eines.canviar_versio=Canviar a la versió
+expedient.info.informacio=Informació de l'expedient
+expedient.info.confirm_accio=Estau segur que voleu executar aquesta acció?
+expedient.info.identificacio=Identificació
+expedient.info.tipus=Tipus
+expedient.info.aturat=Aturat
+expedient.info.tramit_origen=Tràmit d'origen
+expedient.info.iniciat_per=Iniciat per
+expedient.info.numero_registre=Número de registre
+expedient.info.data_registre=Data de registre
+expedient.info.iniciat_el=Iniciat el
+expedient.info.persona_responsable=Persona responsable
+expedient.info.finalitzat_el=Finalitzat el
+expedient.info.numero_id_intern=Número identificatiu intern
+expedient.info.definicio_proces=Definició de procés
+expedient.info.situacio_actual=Situació actual
+expedient.info.executar_accio=Executar acció
+expedient.iniciar.disponibles=Expedients disponibles per iniciar
+expedient.iniciar.confirm_iniciar=Estau segur que voleu iniciar un nou expedient?
+expedient.iniciar.darrera_versio=Darrera versió
+expedient.iniciar.iniciar_expedient=Iniciar expedient
+expedient.llistat.expedients=Expedients
+expedient.llistat.expedient=Expedient
+expedient.iniciar.confirm_esborrar=Estau segur que voleu esborrar aquest expedient?
+expedient.registre=Registre de l'expedient
+expedient.registre.accio=Acció
+expedient.registre.entitat=Entitat
+expedient.registre.missatge=Descripció
+expedient.registre.valorVell=Valor antic
+expedient.registre.valorNou=Valor nou
+expedient.tasca.reassignar=Reassignar tasca
+expedient.tasca.expresio_assignacio=Expressió d'assignació
+
+
+comuns.georeferencia=Georeferència
 comuns.georeferencia.codi=Codi georeferencial
 comuns.georeferencia.coordenades=Coordenades georeferència
 comuns.georeferencia.coordX=X\: 
 comuns.georeferencia.coordY=Y\: 
+comuns.georeferencia.coordenadaX=Coordenada X
+comuns.georeferencia.coordenadaY=Coordenada Y 
 
 info.area.guardat=L'àrea s'ha guardat correctament
 info.area.esborrat=L'àrea s'ha esborrat correctament
@@ -192,13 +278,16 @@ info.formulari.restaurat=El formulari s'ha restaurat correctament
 
 ### MISSATGES JSP ###
 
+comuns.adjuntar=Adjuntar
 comuns.afegir=Afegir
 comuns.amunt=Amunt
 comuns.area=Àrea
 comuns.arees=Àrees
 comuns.arxiu=Arxiu
+comuns.aturar=Aturar
 comuns.avall=Avall
 comuns.cancelar=Cancel·lar
+comuns.canviar_versio=Canviar versió
 comuns.carrec=Càrrec
 comuns.carrecs=Càrrecs
 comuns.codi=Codi
@@ -212,10 +301,15 @@ comuns.descripcio=Descripció
 comuns.disseny=Disseny
 comuns.document=Document
 comuns.documents=Documents
+comuns.editar=Editar
 comuns.esborrar=Esborrar
+comuns.esborrar_signatura=Esborrar Signatura
 comuns.etiqueta=Etiqueta
+comuns.executar=Executar
+comuns.iniciar=Iniciar
 comuns.membres=Membres
 comuns.modificar=Modificar
+comuns.modificar_info=Modificar informació
 comuns.multiple=Múltiple
 comuns.no=No
 comuns.nom=Nom
@@ -224,6 +318,8 @@ comuns.organitzacio=Organització
 comuns.pare=Pare
 comuns.persona=Persona
 comuns.propietats=Propietats
+comuns.reassignar=Reassignar
+comuns.reprendre=Reprendre
 comuns.sexe=Sexe
 comuns.si=Si
 comuns.suggerir=Suggerir
@@ -368,6 +464,7 @@ common.tram.form_no_validat=El formulari de la tasca encara no ha estat validat
 common.tram.docs_sense_adj=Hi ha documents obligatoris sense adjuntar
 common.tram.docs_sense_sign=Hi ha documents obligatoris sense signar
 common.tram.finalitzar=Finalitzar la tasca
+common.tram.outcome.finalitzar=Finalitzar
 
 consulta.camps.del_filtre=del filtre
 consulta.camps.de_linforme=de l'informe
@@ -401,6 +498,8 @@ decorators.entorn.despl_arxiu=Desplegar arxiu
 decorators.entorn.defs_proces=Definicions de procés
 decorators.entorn.enumeracions=Enumeracions
 decorators.entorn.dominis=Dominis
+decorators.entorn.alert_no_llegides=Hi ha alertes sense llegir
+decorators.entorn.alert_activa=Hi ha alertes actives
 
 decorators.superior.inici=Inici
 decorators.superior.selec_entorn=Seleccionar entorn
