--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_es.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_es.properties
@@ -1,4 +1,23 @@
 salutacio=Bon dia
+expedient.consulta.gis=Obre en visor GIS
+expedient.consulta.titol=T\u00EDtol
+expedient.consulta.numero=N\u00FAmero
+expedient.consulta.datainici=Data d'inici
+expedient.consulta.i=i
+expedient.consulta.tipusexpedient=Tipus d'expedient
+expedient.consulta.select.tipusexpedient=Seleccioni un tipus d'expedient
+expedient.consulta.select.estat=Seleccioni un estat
+expedient.consulta.estat=Estat
+expedient.consulta.entre=Entre
+expedient.consulta.consultar=Consultar
+expedient.consulta.netejar=Netejar
+expedient.consulta.cons_general=Consulta general
+expedient.consulta.iniciat=Iniciat
+expedient.consulta.finalitzat=Finalitzat
+comuns.georeferencia.codi=Codi georeferencial
+comuns.georeferencia.coordenades=Coordenades georeferència
+comuns.georeferencia.coordX=X\: 
+comuns.georeferencia.coordY=Y\: 
 
 info.area.guardat=L'àrea s'ha guardat correctament
 info.area.esborrat=L'àrea s'ha esborrat correctament
@@ -352,6 +371,7 @@ common.tram.form_no_validat=El formulari de la tasca encara no ha estat validat
 common.tram.docs_sense_adj=Hi ha documents obligatoris sense adjuntar
 common.tram.docs_sense_sign=Hi ha documents obligatoris sense signar
 common.tram.finalitzar=Finalitzar la tasca
+common.tram.outcome.finalitzar=Finalitzar
 
 consulta.camps.del_filtre=del filtre
 consulta.camps.de_linforme=de l'informe
@@ -385,6 +405,8 @@ decorators.entorn.despl_arxiu=Desplegar arxiu
 decorators.entorn.defs_proces=Definicions de procés
 decorators.entorn.enumeracions=Enumeracions
 decorators.entorn.dominis=Dominis
+decorators.entorn.alert_no_llegides=Hi ha alertes sense llegir
+decorators.entorn.alert_activa=Hi ha alertes actives
 
 decorators.superior.inici=Inici
 decorators.superior.selec_entorn=Seleccionar entorn
