Permetre formularis externs a la tasca inicial
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/branch-2.1@169 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -321,6 +321,8 @@ comuns.titol=Títol
 comuns.tornar=Tornar
 comuns.variables=Variables
 comuns.anular=Anular
+comuns.guardar=Guardar
+comuns.adjunts=Adjunts
 
 comuns.camps_marcats=Els camps marcats amb
 comuns.camp_oblig=Camp obligatori
@@ -431,6 +433,8 @@ common.tabsexptipus.estats=Estats
 common.tabsexptipus.definicions=Definicions de procés
 common.tabsexptipus.integ_tram=Integració amb tràmits
 common.tabsexptipus.integ_forms=Integració amb forms
+common.tabsexptipus.enumeracions=Enumeracions
+common.tabsexptipus.dominis=Dominis
 
 common.tabstasca.confirmacio=Estau segur que voleu cancel·lar la delegació?
 common.tabstasca.heu_delegat=Heu delegat aquesta tasca
@@ -715,6 +719,11 @@ exptipus.sistra.selec_codi=Selecciona un codi
 exptipus.sistra.codihelium=Codi Helium
 exptipus.sistra.codisistra=Codi Sistra
 
+exptipus.formext.activar=Activar
+exptipus.formext.url=Url del servei d'integració amb formularis externs
+exptipus.formext.usuari=Usuari del servei
+exptipus.formext.contrasenya=Contrasenya del servei
+exptipus.formext.noaut=Si no necessita autenticació es pot deixar en blanc
 
 festiu.cal.festius=Festius
 festiu.cal.any_selec=Any seleccionat
