- Canviar la redirecció dels expedents a la consulta general (ara va al listat de tasques de l'expedient) - Afegit un bodó per accedir a l'expedient, des de la consulta general - Afegit handler per a copiar swimlanes del procés pare al procés fill - Afegida informació (identificador, nom de l'estat i nom de l'expedient tipus) per a la consulta d'expedients des de ws
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/branch-2.1@172 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -294,6 +294,7 @@ comuns.document=Document
 comuns.documents=Documents
 comuns.editar=Editar
 comuns.esborrar=Esborrar
+comuns.informacio=Informaci\u00F3
 comuns.esborrar_signatura=Esborrar Signatura
 comuns.etiqueta=Etiqueta
 comuns.executar=Executar
