Solució error amb mapejos de sistra al actualitzar a la versió 2.1 i en l'script d'actualització per oracle
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/branch-2.1@176 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -576,6 +576,7 @@ defproc.docform.emprat_sign=Emprat en la signatura del document
 defproc.docform.codi_custodia=Codi per a la custòdia
 defproc.docform.tipus_doc=Tipus de document
 defproc.docform.codi_doc=Codi del document pel portasignatures
+defproc.docform.adj_auto=Adjuntar automàticament al generar
 
 defproc.docllistat.confirmacio=Estau segur que voleu esborrar aquest registre?
 defproc.docllistat.es_plantillaq=És plantilla?
@@ -652,6 +653,7 @@ defproc.termform.dies_previs=Dies previs per alerta
 defproc.termform.es_generara=Es generarà una alerta els dies especificats abans de finalitzar el termini. Si es deixa buit no es generarà cap alerta.
 defproc.termform.gen_alert_previa=Generar alerta prèvia?
 defproc.termform.gen_alert_final=Generar alerta final?
+defproc.termform.gen_alert_complet=Generar alerta al finalitzar la tasca?
 
 defproc.termllist.confirmacio=Estau segur que voleu esborrar aquest termini?
 defproc.termllist.durada=Durada
@@ -711,6 +713,7 @@ enumeracio.form.comentari=codi1:text1,codi2:text2, ... ,codin:textn
 
 enumeracio.llistat.enumeracions=Enumeracions
 enumeracio.llistat.confirmacio=Estau segur que voleu esborrar aquesta enumeració?
+enumeracio.llistat.valors=Valors
 enumeracio.llistat.nova=Nova enumeració
 
 exptipus.sistra.mapeigs.vars_variables=Mapeig de variables
