Faltaven dues traduccions
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/branch-2.1@184 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -716,6 +716,8 @@ enumeracio.llistat.confirmacio=Estau segur que voleu esborrar aquesta enumeració
 enumeracio.llistat.valors=Valors
 enumeracio.llistat.nova=Nova enumeració
 
+enumeracio.valors.confirmacio=Estau segur que voleu esborrar aquest valor?
+
 exptipus.sistra.mapeigs.vars_variables=Mapeig de variables
 exptipus.sistra.mapeigs.vars_documents=Mapeig de documents
 exptipus.sistra.mapeigs.vars_adjunts=Mapeig de documents com adjunts
@@ -880,6 +882,7 @@ tasca.doc.document=Document
 tasca.doc.data=Data
 tasca.doc.guardar=Guardar
 tasca.doc.doc_marcats=Els documents marcats amb
+tasca.doc.generar.auto.confirm=El document generat s'adjuntarà automàticament a l'expedient. Voleu continuar?
 
 tasca.form.confirmacio=Estau segur que voleu donar per bones les dades d'aquesta tasca?
 tasca.form.dades_form=Dades del formulari
