Error al anular expedients: No desapareixien les tasques associades.
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/branch-2.1@195 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -66,6 +66,7 @@ expedient.info.confirm_accio=Estau segur que voleu executar aquesta acció?
 expedient.info.identificacio=Identificació
 expedient.info.tipus=Tipus
 expedient.info.aturat=Aturat
+expedient.info.anulat=Anul·lat
 expedient.info.tramit_origen=Tràmit d'origen
 expedient.info.iniciat_per=Iniciat per
 expedient.info.numero_registre=Número de registre
