--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
@@ -1,3 +1,7 @@
+##
+# Missatges d'error del package net.conselldemallorca.helium.webapp.mvc
+##
+
 typeMismatch=El contingut d'aquest camp no té el format correcte
 
 not.blank=Per favor, especifiqui algun valor
@@ -15,6 +19,8 @@ error.carrec.codi.repetit=Ja existeix una altre càrrec amb aquest codi
 error.expedienttipus.codi.repetit=Ja existeix una altre tipus d'expedient amb aquest codi
 error.expedienttipus.desconegut=No s'ha trobat el tipus d'expedient
 error.expedienttipus.sistra.repetit=Ja existeix un altre tipus d'expedient amb aquest mateix identificador
+error.expedienttipus.sistra.mapeig.repetit=Ja existeix un altre mapeig en aquest expedient per aquest mateix codi Helium
+error.mapeigSistra.canviVersio=S'ha produït un error realizant el procés de canvi de versió del mapeig amb Sistra
 error.expedient.titolrepetit=Ja existeix un expedient d'aquest tipus amb el mateix títol
 error.expedient.numerorepetit=Ja existeix un expedient d'aquest tipus amb el mateix número
 error.camp.codi.char.nok=El codi no pot contenir punts
@@ -27,3 +33,221 @@ error.validator=Error intern de validació
 
 error.data.anterior=La data no pot ser anterior al dia d'avui
 error.dataFi.anterior=La data de fi no pot ser anterior a la data d'inici
+
+error.no.entorn.selec=No hi ha cap entorn seleccionat
+error.marcar.alerta.llegida=No s'ha pogut marcar l'alerta com a llegida
+error.marcar.alerta.no.llegida=No s'ha pogut marcar l'alerta com a no llegida
+error.esborrar.alerta=No s'ha pogut esborrar l'alerta
+error.crear.alerta=No s'ha pogut crear l'alerta
+
+error.proces.peticio=S'ha produït un error processant la seva petició
+error.esborrar.area=No s'ha pogut esborrar l'àrea
+
+error.afegir.persona.area=No s'ha pogut afegir el membre
+error.esborrar.persona.area=No s'ha pogut esborrar la persona
+
+error.exist.arees.depenen=No es pot esborrar aquest tipus perquè existeixen àrees que hi depenen
+error.esborrar.areatipus=No s'ha pogut esborrar el tipus d'àrea
+
+error.esborrar.infocarrec=No s'ha pogut esborrar la informació del càrrec
+
+error.validacio=S'han produit errors de validació
+
+error.guardar.dades=No s'ha pogut guardar les dades
+error.esborrar.registre=No s'ha pogut esborrar el registre
+
+error.esborrar.camp.consulta=No s'ha pogut esborrar el camp de la consulta
+error.canviar.ordre.camp.consulta=No s'ha pogut canviar l'ordre del camp de la consulta
+
+error.esborrar.consulta=No s'ha pogut esborrar la consulta
+
+error.permisos.disseny.defproc=No té permisos de disseny sobre aquesta definició de procés
+
+error.canviar.ordre.agrup=No s'ha pogut canviar l'ordre de l'agrupació
+error.permisos.disseny.agrup=No té permisos de disseny sobre aquesta agrupació
+error.canviar.ordre.camp.agrup=No s'ha pogut canviar l'ordre del camp dins l'agrupació
+
+error.afegir.camp.tasca=No s'ha pogut afegir el camp a la tasca
+error.esborrar.camp.tasca=No s'ha pogut esborrar el camp
+error.ordre.camp.tasca=No s'ha pogut canviar l'ordre del camp
+
+error.permisos.disseny.entorn=No té permisos de disseny sobre aquest entorn
+error.exist.exp.defproc=Existeixen expedients amb aquesta definició de procés
+error.arxius.no.valid=Aquest arxiu no és un arxiu d'exportació vàlid
+error.arxiu.importar=Error llegint l'arxiu a importar\: 
+error.import.dades=Error en la importaci\u00F3 de dades\: 
+
+error.despl.arxius.entorn=No té permisos per desplegar arxius a dins aquest entorn
+error.desplegar.arxius=Error desplegant l'arxiu
+
+error.afegir.doc.tasca=No s'ha pogut afegir el document a la tasca
+error.esborrar.doc.tasca=No s'ha pogut esborrar el document de la tasca
+error.ordre.doc.tasca=No s'ha pogut canviar l'ordre del document
+
+error.afegir.firma.tasca=No s'ha pogut afegir la firma a la tasca
+error.esborrar.firma.tasca=No s'ha pogut esborrar la firma de la tasca
+error.ordre.firma.tasca=No s'ha pogut canviar l'ordre de la firma
+
+error.afegir.membre.reg=No s'ha pogut afegir el membre al registre
+error.esborrar.membre.reg=No s'ha pogut esborrar el membre del registre
+error.ordre.membre.reg=No s'ha pogut canviar l'ordre dels membres del registre
+
+error.esborrar.termini=No s'ha pogut esborrar el termini
+
+error.especificar.expressio.validacio=S'ha d'especificar una expressió de validació
+error.especificar.missatge.validacio=S'ha d'especificar un missatge de validació
+error.afegir.validacio.camp=No s'ha pogut afegir la validació al camp
+error.esborrar.validacio.camp=No s'ha pogut esborrar la validació del camp
+error.ordre.validacio=No s'ha pogut canviar l'ordre de la validació
+
+error.afegir.validacio.tasca=No s'ha pogut afegir la validació a la tasca
+error.esborrar.validacio.tasca=No s'ha pogut esborrar la validació de la tasca
+
+error.esborrar.domini=No s'ha pogut esborrar el domini
+error.consultar.domini=No s'ha pogut consultar el domini
+
+error.especificar.arxiu.importar=No s'ha especificat l'arxiu a importar
+
+error.cercar.entorns=Error cercant entorns actius
+
+error.esborrar.enum=No s'ha pogut esborrar l'enumeració
+
+error.esborrar.expedient=No s'ha pogut esborrar l'expedient
+error.anular.expedient=No s'ha pogut anul·lar l'expedient
+error.permisos.esborrar.expedient=No té permisos per esborrar aquest expedient
+error.permisos.consultar.expedient=No té permisos per consultar aquest expedient
+error.permisos.modificar.expedient=No té permisos per modificar aquest expedient
+error.permisos.anular.expedient=No té permisos per anul·lar aquest expedient
+
+error.esborrar.dada.proces=No s'ha pogut esborrar la dada del procés
+error.esborrar.dada.tasca=No s'ha pogut esborrar la dada de la tasca
+
+error.esborrar.doc.signat=No es pot esborrar un document signat
+error.esborrar.doc.registrat=No es pot esborrar un document registrat
+error.esborrar.doc.proces=No s'ha pogut esborrar el document del procés
+error.esborrar.signatura=No s'ha pogut esborrar la signatura
+
+error.modificar.doc.signat=No es pot modificar un document signat
+error.generar.document=No s'ha pogut generar el document
+error.generar.document.buit=La plantilla ha produit un document buit
+
+error.modificar.dades.exp=No s'han pogut modificar les dades de l'expedient
+
+error.executar.script=No s'ha pogut executar l'script
+error.aturar.expedient=No s'ha pogut aturar l'expedient
+error.expedient.ja.aturat=Aquest expedient ja està aturat
+error.reprendre.expedient=No s'ha pogut reprendre l'expedient
+error.expedient.no.aturat=Aquest expedient no està aturat
+error.especificar.versio.proces=No s'ha especificat cap versió de procés
+error.canviar.versio.proces=No s'ha pogut canviar la versió de procés
+
+error.exist.exp.mateix.numero=Ja existeix un expedient amb el mateix número, torni a iniciar l'expedient
+error.iniciar.expedient=S'ha produït un error iniciant l'expedient
+error.permisos.iniciar.tipus.exp=No té permisos per iniciar expedients d'aquest tipus
+
+error.reassignar.tasca=No s'ha pogut reassignar la tasca {0}
+
+error.suspendre.tasca=No s'ha pogut suspendre la tasca {0}
+error.reprendre.tasca=No s'ha pogut reprendre la tasca {0}
+error.cancelar.tasca=No s'ha pogut cancel·lar la tasca {0}
+
+error.iniciar.termini=No s'ha pogut iniciar el termini
+error.aturar.termini=No s'ha pogut aturar el termini
+error.continuar.termini=No s'ha pogut continuar el termini
+error.cancelar.termini=No s'ha pogut cancelar el termini
+
+error.permisos.disseny.tipus.exp=No té permisos de disseny sobre aquest tipus d'expedient
+error.esborrar.tipus.exp=No s'ha pogut esborrar el tipus d'expedient
+error.configurar.defproc.inicial=No s'ha pogut configurar la definició de procés inicial
+
+error.ordre.estat=No s'ha pogut canviar l'ordre de l'estat
+
+error.retrocedir.token=No s'ha pogut retrocedir el token
+
+error.guardar.perfil=No s'ha pogut guardar el perfil
+error.modificar.contrasenya=No s'ha pogut modificar la contrasenya
+
+error.exist.usuaris.rol=Hi ha usuaris que empren aquest rol
+error.esborrar.rols.admin.usuari=El rol d'administrador i el rol d'usuari no es poden esborrar
+
+error.afegir.permisos.entorn=No s'han pogut afegir els permisos a l'entorn
+error.esborrar.permisos.entorn=No s'han pogut esborrar els permisos
+
+error.afegir.permisos.tipusexp=No s'han pogut afegir els permisos al tipus d'expedient
+error.esborrar.permisos.tipusexp=No s'han pogut esborrar els permisos
+
+error.validar.signatura=Error en la validació de la signatura
+error.rebre.signatura=Error rebent la signatura del document
+
+error.finalitzar.tasca=Error al finalitzar la tasca
+
+error.especificar.dest.delegacio=No ha especificat cap destinatari per a la delegació
+
+error.tasca.no.disponible=Aquesta tasca ja no està disponible
+error.especificar.document=S'ha d'especificar un document
+error.especificar.data=S'ha d'especificar la data
+
+error.executar.accio=No s'ha pogut executar l'acció
+error.validar.formulari=No s'ha pogut validar el formulari
+error.restaurar.formulari=No s'ha pogut restaurar el formulari
+error.afegir.camp.multiple=No s'ha pogut afegir el camp múltiple
+error.esborrar.camp.multiple=No s'ha pogut esborrar el camp múltiple
+
+error.no.enumeracio.selec=No s'ha seleccionat cap enumeració
+error.enumeracio.valor.codi.repetit=Ja existeix un valor amb aquest codi
+
+##
+# Missatges d'error del package net.conselldemallorca.helium.core.model.service
+##
+
+error.personaService.noLogin=La persona #{0} no té el login activat
+error.personaService.noExisteix=La persona #{0} no existeix
+
+error.dissenyService.defprocDesplTipusExp=Aquesta definició de procés ja està desplegada a dins el tipus d'expedient "{0}"
+error.dissenyService.defprocDesplEntorn=Aquesta definició de procés ja està desplegada a dins l'entorn
+error.dissenyService.noConte=L'arxiu no conté cap definició de procés.
+error.dissenyService.noEntorn=No s'ha especificat cap entorn o la definició de procés no correspon amb l'entorn especificat
+error.dissenyService.noTipusExp=No s'ha especificat cap tipus d'expedient o la definició de procés no correspon amb el tipus d'expedient especificat
+error.dissenyService.generantContingut=Error generant el contingut del desplegament
+error.dissenyService.consultantDomini=Error consultant el domini
+error.dissenyService.enumNoDefinida=L'enumeració '{0}' no està definida
+error.dissenyService.dominiNoDefinit=El domini '{0}' no està definit
+
+error.documentService.formatIncorrecte=El format del token és incorrecte
+
+error.dtoConverter.consultarDomini=No s'ha pogut consultar el domini
+
+error.entornService.entornNoTrobat=No s'ha trobat l'entorn amb id: {0}
+
+error.expedientService.jaExisteix=Ja existeix un altre expedient amb el mateix número ({0})
+error.expedientService.noExisteix=No existeix l'expedient per l'entorn
+error.expedientService.generarDocument=No s'ha pogut generar el document
+error.expedientService.trobarPersona=No s'ha trobat la persona amb codi '{0}'
+
+error.orgService.trobarArea=No s'ha trobat l'area amb id: {0}
+error.orgService.trobarPersona=No s'ha trobat la persona amb el codi: {0}
+error.orgService.trobarCarrec=No s'ha trobat el càrrec amb id: {0}
+
+error.pluginService.pujarDocument=No s'ha pogut pujar el document al portasignatures
+error.pluginService.capSignatura=El portasignatures no ha retornat cap signatura
+error.pluginService.noDisponible=Aquest document no està disponible per signar
+
+error.tascaService.noValidada=La tasca no ha estat validada
+error.tascaService.formNoValidat=El formulari no ha estat validat
+error.tascaService.faltenAdjuntar=Falten documents per adjuntar
+error.tascaService.faltenSignar=Falten documents per signar
+error.tascaService.tokenIncorrecte=El format del token és incorrecte
+error.tascaService.docNoDisponible=Aquest document no està disponible per signar
+error.tascaService.generarDocument=No s'ha pogut generar el document
+error.tascaService.cancelarDelegacio=No es pot cancel·lar la delegació d'aquesta tasca
+error.tascaService.noFormExtern=Aquesta tasca no té definit cap formulari extern
+error.tascaService.noTrobada=No s'ha trobat la tasca
+error.tascaService.noAssignada=Aquest usuari no té aquesta tasca assignada
+error.tascaService.noDisponible=Aquesta tasca no està disponible
+
+error.terminiService.noIniciat=El termini no està iniciat
+error.terminiService.noPausat=El termini no està pausat
+
+error.update.actualitzar.versio=No s'ha pogut actualitzar a la versió
+error.update.script.ko=L'script de base de dades no ha estat executat
+error.update.proces.ko=Contacti amb el seu administrador abans d'utilitzar l'aplicació.
