mid: 0000118 msg: Errors en la gestió d'enumeracions
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.2@210 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
@@ -194,7 +194,9 @@ error.afegir.camp.multiple=No s'ha pogut afegir el camp múltiple
 error.esborrar.camp.multiple=No s'ha pogut esborrar el camp múltiple
 
 error.no.enumeracio.selec=No s'ha seleccionat cap enumeració
+error.enumeracio.codi.repetit=Ja existeix una enumeració amb aquest codi
 error.enumeracio.valor.codi.repetit=Ja existeix un valor amb aquest codi
+error.enumeracio.emprada.camp=Aquesta enumeració no es pot esborrar perquè està actualment en ús
 
 ##
 # Missatges d'error del package net.conselldemallorca.helium.core.model.service
