mid: 0000130 msg: Dades errònies al enviar documents al portafirmes des d'un subprocés
mid: 0000131
msg: Millorar consultes avançades i afegir suport per a la generació d'informes

git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.2@226 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
@@ -198,6 +198,10 @@ error.enumeracio.codi.repetit=Ja existeix una enumeració amb aquest codi
 error.enumeracio.valor.codi.repetit=Ja existeix un valor amb aquest codi
 error.enumeracio.emprada.camp=Aquesta enumeració no es pot esborrar perquè està actualment en ús
 
+error.consulta.informe.nonhiha=Aquesta consulta no té configurat cap informe
+error.consulta.informe.nofiltre=Seleccioni primer una consulta
+error.consulta.tipexp.noaut=No està autoritzat per a consultar aquest tipus d'expedient
+
 ##
 # Missatges d'error del package net.conselldemallorca.helium.core.model.service
 ##
