--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -18,6 +18,8 @@ expedient.consulta.consulta=Consulta
 expedient.consulta.iniciat=Iniciat
 expedient.consulta.finalitzat=Finalitzat
 expedient.consulta.canviar=Canviar
+expedient.consulta.informe=Mostrar informe
+
 expedient.dada.afegir_dada=Afegir dada
 expedient.dada.select.variable=Seleccioni una variable
 expedient.dada.variable=Variable
@@ -181,6 +183,7 @@ info.domini.esborrat=El domini s'ha esborrat correctament
 info.entorn.guardat=L'entorn s'ha guardat correctament
 info.entorn.esborrat=L'entorn s'ha esborrat correctament
 info.entorn.dades.importat=Les dades de l'entorn s'han importat correctament
+info.entorn.reindexat=Els expedients de l'entorn s'han reindexat correctament
 
 info.enum.guardat=L'enumeració s'ha guardat correctament
 info.enum.esborrat=L'enumeració s'ha esborrat correctament
@@ -475,6 +478,8 @@ consulta.camps.variable=Variable
 consulta.form.crear_nova=Crear nova consulta
 consulta.form.modificar=Modificar consulta
 consulta.form.selec_tipus=Seleccioni un tipus d'expedient
+consulta.form.informe=Informe
+consulta.form.exportar=Exportar actiu?
 
 consulta.llistat.confirmacio=Estau segur que voleu esborrar aquesta consulta?
 consulta.llistat.vars_filtre=Variables del filtre
@@ -487,8 +492,8 @@ decorators.default.usuari=Usuari
 
 decorators.entorn.entorn=Entorn
 decorators.entorn.permisos=Permisos
-decorators.entorn.cons_general=Consulta general
-decorators.entorn.cons_avansades=Consultes avançades
+decorators.entorn.consultes.llistat=Llistat d'expedients
+decorators.entorn.consultes.tipus=Consultes per tipus
 decorators.entorn.nou_exp=Nou expedient
 decorators.entorn.tipus_area=Tipus d'àrea
 decorators.entorn.despl_arxiu=Desplegar arxiu
@@ -697,10 +702,12 @@ entorn.form.importar=Importar
 entorn.form.exp_dades=Exportar dades
 
 entorn.llistat.entorns=Entorns
-entorn.llistat.confirmacio=Estau segur que voleu esborrar aquest registre?
+entorn.llistat.confirmacio.esborrar=Estau segur que voleu esborrar aquest entorn?
+entorn.llistat.confirmacio.reindexar=Estau segur que voleu reindexar aquest entorn?
 entorn.llistat.actiu=Actiu
 entorn.llistat.permisos=Permisos
 entorn.llistat.nou=Nou entorn
+entorn.llistat.reindexar=Reindexar
 
 entorn.seleccio.selec_entorn=Seleccionar entorn
 entorn.seleccio.no_hi_ha=No hi ha cap entorn disponible
