--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -343,6 +343,18 @@ alerta.llistat.alertes=Alertes
 alerta.llistat.confirmacio=Estau segur que voleu esborrar aquesta tarea?
 alerta.llistat.creada_el=Creada el
 alerta.llistat.expedient=Expedient
+alerta.llistat.causa=Causa
+alerta.llistat.missatge=Missatge
+alerta.llistat.apunt_dexpirar=A punt d'expirar
+alerta.llistat.expirat=Expirada
+alerta.llistat.completat_atemps=Completada
+alerta.llistat.completat_fora=Fora de temps
+alerta.llistat.prioritat=Prioritat
+alerta.llistat.m_baixa=Molt baixa
+alerta.llistat.baixa=Baixa
+alerta.llistat.normal=Normal
+alerta.llistat.alta=Alta
+alerta.llistat.m_alta=Molt alta
 alerta.llistat.text=Text
 alerta.llistat.data_limit=Data límit
 alerta.llistat.marcar_llegida=Marcar com a llegida
