mid: 0000131 msg: Millorar consultes avançades i afegir suport per a la generació d'informes
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.2@237 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -19,6 +19,7 @@ expedient.consulta.iniciat=Iniciat
 expedient.consulta.finalitzat=Finalitzat
 expedient.consulta.canviar=Canviar
 expedient.consulta.informe=Mostrar informe
+expedient.consulta.trobats=S&#39;han trobat {0} expedients
 
 expedient.dada.afegir_dada=Afegir dada
 expedient.dada.select.variable=Seleccioni una variable
@@ -325,7 +326,7 @@ comuns.tipus=Tipus
 comuns.titol=Títol
 comuns.tornar=Tornar
 comuns.variables=Variables
-comuns.anular=Anular
+comuns.anular=Anul·lar
 comuns.guardar=Guardar
 comuns.adjunts=Adjunts
 
@@ -484,7 +485,7 @@ consulta.camps.de_consulta=de la consulta
 consulta.camps.selec_var=Seleccioni una variable
 consulta.camps.confirmacio=Estau segur que voleu esborrar aquest registre?
 consulta.camps.afegir_var=Afegir variable
-consulta.camps.selec_def=Seleccioni una definició de procés
+consulta.camps.selec_def=Sense definició de procés
 consulta.camps.variable=Variable
 
 consulta.form.crear_nova=Crear nova consulta
@@ -496,6 +497,14 @@ consulta.form.exportar=Exportar actiu?
 consulta.llistat.confirmacio=Estau segur que voleu esborrar aquesta consulta?
 consulta.llistat.vars_filtre=Variables del filtre
 consulta.llistat.nova=Nova consulta
+
+consulta.subconsulta.camp.subconsultes=Subconsultes
+consulta.subconsulta.esborrar.confirm=Està segur que vol esborrar aquesta subconsulta?
+consulta.subconsulta.camp.subconsulta=Subconsulta
+consulta.subconsulta.camp.subconsulta.seleccioni=Seleccioni una consulta
+consulta.subconsulta.camp.subconsulta.buit=Sense consultes disponibles
+consulta.subconsulta.afegit=S'ha afegit la subconsulta a la consulta
+consulta.subconsulta.esborrat=S'ha esborrat la subconsulta de la consulta
 
 decorators.default.benvinguts=Benvinguts
 decorators.default.autenticat_amb=Autenticat actualment amb l'usuari
