--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -2,9 +2,9 @@ salutacio=Bon dia
 expedient.consulta.gis=Obre en visor GIS
 expedient.consulta.titol=T\u00EDtol
 expedient.consulta.numero=N\u00FAmero
-expedient.consulta.datainici=Data d'inici
+expedient.consulta.datainici=Data d&#39;inici
 expedient.consulta.i=i
-expedient.consulta.tipusexpedient=Tipus d'expedient
+expedient.consulta.tipusexpedient=Tipus d&#39;expedient
 expedient.consulta.select.tipusexpedient=Seleccioni un tipus d'expedient
 expedient.consulta.select.estat=Seleccioni un estat
 expedient.consulta.select.consula=Seleccioni una consulta
@@ -19,7 +19,9 @@ expedient.consulta.iniciat=Iniciat
 expedient.consulta.finalitzat=Finalitzat
 expedient.consulta.canviar=Canviar
 expedient.consulta.informe=Mostrar informe
-expedient.consulta.trobats=S&#39;han trobat {0} expedients
+expedient.consulta.trobats=Hi ha {0} expedients que coincideixen amb els criteris especificats
+expedient.consulta.trobatun=Hi ha un expedient que coincideix amb els criteris especificats
+expedient.consulta.notrobats=No hi ha cap expedient que coincideixi amb els criteris especificats
 
 expedient.dada.afegir_dada=Afegir dada
 expedient.dada.select.variable=Seleccioni una variable
