mid: 0000131 msg: Millorar consultes avançades i afegir suport per a la generació d'informes
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.2@251 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -494,6 +494,7 @@ consulta.form.crear_nova=Crear nova consulta
 consulta.form.modificar=Modificar consulta
 consulta.form.selec_tipus=Seleccioni un tipus d'expedient
 consulta.form.informe=Informe
+consulta.form.valors=Valors predefinits
 consulta.form.exportar=Exportar actiu?
 
 consulta.llistat.confirmacio=Estau segur que voleu esborrar aquesta consulta?
