mid: 0000159 msg: Possibilitat de marcar variables com a ocultes
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.2@273 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
@@ -23,6 +23,7 @@ error.expedienttipus.sistra.mapeig.repetit=Ja existeix un altre mapeig en aquest
 error.mapeigSistra.canviVersio=S'ha produït un error realizant el procés de canvi de versió del mapeig amb Sistra
 error.expedient.titolrepetit=Ja existeix un expedient d'aquest tipus amb el mateix títol
 error.expedient.numerorepetit=Ja existeix un expedient d'aquest tipus amb el mateix número
+error.expedient.relacio.esborrar=Error al esborrar la relació de l'expedient
 error.camp.codi.char.nok=El codi no pot contenir punts
 error.camp.codi.maymin=El codi no pot començar amb una lletra majúscula i a continuació una minúscula
 error.camp.enumdom.buit=S'ha d'especificar una enumeració o un domini
