--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -1,4 +1,5 @@
 salutacio=Bon dia
+
 expedient.consulta.gis=Obre en visor GIS
 expedient.consulta.titol=T\u00EDtol
 expedient.consulta.numero=N\u00FAmero
@@ -22,6 +23,8 @@ expedient.consulta.informe=Mostrar informe
 expedient.consulta.trobats=Hi ha {0} expedients que coincideixen amb els criteris especificats
 expedient.consulta.trobatun=Hi ha un expedient que coincideix amb els criteris especificats
 expedient.consulta.notrobats=No hi ha cap expedient que coincideixi amb els criteris especificats
+expedient.consulta.confirm.esborrar=Estau segur que voleu esborrar aquest expedient?
+expedient.consulta.confirm.anular=Estau segur que voleu anul·lar aquest expedient?
 
 expedient.dada.afegir_dada=Afegir dada
 expedient.dada.select.variable=Seleccioni una variable
@@ -67,7 +70,8 @@ expedient.eines.script=Script
 expedient.eines.canviar_versio_proces=Canviar la versió del procés
 expedient.eines.canviar_versio=Canviar a la versió
 expedient.info.informacio=Informació de l'expedient
-expedient.info.confirm_accio=Estau segur que voleu executar aquesta acció?
+expedient.info.confirm.accio.executar=Estau segur que voleu executar aquesta acció?
+expedient.info.confirm.relacio.esborrar=Estau segur que voleu esborrar aquesta relació?
 expedient.info.identificacio=Identificació
 expedient.info.tipus=Tipus
 expedient.info.aturat=Aturat
@@ -83,6 +87,10 @@ expedient.info.numero_id_intern=Número identificatiu intern
 expedient.info.definicio_proces=Definició de procés
 expedient.info.situacio_actual=Situació actual
 expedient.info.executar_accio=Executar acció
+expedient.info.relacionats=Expedients relacionats
+expedient.info.relacionar.amb=Relacionar amb
+expedient.info.relacionar=Relacionar
+expedient.info.relacionar.afegir=Afegir expedient relacionat
 expedient.iniciar.disponibles=Expedients disponibles per iniciar
 expedient.iniciar.confirm_iniciar=Estau segur que voleu iniciar un nou expedient?
 expedient.iniciar.darrera_versio=Darrera versió
@@ -98,6 +106,8 @@ expedient.registre.valorVell=Valor antic
 expedient.registre.valorNou=Valor nou
 expedient.tasca.reassignar=Reassignar tasca
 expedient.tasca.expresio_assignacio=Expressió d'assignació
+expedient.relacionar.ok=L'expedient s'ha relacionat correctament
+expedient.relacio.esborrar.ok=La relació s'ha esborrat correctament
 
 
 comuns.georeferencia=Georeferència
@@ -513,6 +523,7 @@ decorators.default.benvinguts=Benvinguts
 decorators.default.autenticat_amb=Autenticat actualment amb l'usuari
 decorators.default.sortir=Sortir
 decorators.default.usuari=Usuari
+decorators.default.cerca=Filtrar resultats
 
 decorators.entorn.entorn=Entorn
 decorators.entorn.permisos=Permisos
@@ -570,6 +581,7 @@ defproc.campform.camp_valor=Camp amb el valor
 defproc.campform.dades_accio=Dades de l'acció
 defproc.campform.selec_hand=Seleccioni un handler
 defproc.campform.handler=Handler
+defproc.campform.ocult=Ocult
 
 defproc.campllistat.confirmacio=Estau segur que voleu esborrar aquest registre?
 defproc.campllistat.validacions=Validacions
