mid: 0000166 msg: Permetre modificar les consultes avançades des del tipus d'expedient
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.2@285 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -465,6 +465,7 @@ common.tabsexptipus.integ_tram=Integració amb tràmits
 common.tabsexptipus.integ_forms=Integració amb forms
 common.tabsexptipus.enumeracions=Enumeracions
 common.tabsexptipus.dominis=Dominis
+common.tabsexptipus.consultes=Consultes
 
 common.tabstasca.confirmacio=Estau segur que voleu cancel·lar la delegació?
 common.tabstasca.heu_delegat=Heu delegat aquesta tasca
