mid: 0000169 msg: Excepció JDBC ConstraintViolation al esborrar un tipus d'expedient
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.2@290 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
@@ -74,6 +74,7 @@ error.ordre.camp.tasca=No s'ha pogut canviar l'ordre del camp
 
 error.permisos.disseny.entorn=No té permisos de disseny sobre aquest entorn
 error.exist.exp.defproc=Existeixen expedients amb aquesta definició de procés
+error.exist.exp.tipexp=Existeixen expedients amb aquest tipus
 error.arxius.no.valid=Aquest arxiu no és un arxiu d'exportació vàlid
 error.arxiu.importar=Error llegint l'arxiu a importar\: 
 error.import.dades=Error en la importaci\u00F3 de dades\: 
