mid: 0000170 msg: Permetre modificar els terminis iniciats d'un expedient
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.2@291 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
@@ -157,6 +157,7 @@ error.iniciar.termini=No s'ha pogut iniciar el termini
 error.aturar.termini=No s'ha pogut aturar el termini
 error.continuar.termini=No s'ha pogut continuar el termini
 error.cancelar.termini=No s'ha pogut cancelar el termini
+error.modificar.termini=No s'ha pogut modificar el termini
 
 error.permisos.disseny.tipus.exp=No té permisos de disseny sobre aquest tipus d'expedient
 error.esborrar.tipus.exp=No s'ha pogut esborrar el tipus d'expedient
