--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -58,6 +58,26 @@ expedient.editar.entrada_num=Entrada núm.
 expedient.editar.responsable=Responsable
 expedient.editar.comentari=Comentari
 expedient.editar.estat=Estat
+expedient.termini.terminis=Terminis
+expedient.termini.nom=Nom
+expedient.termini.durada=Durada
+expedient.termini.iniciat.el=Iniciat el
+expedient.termini.aturat.el=Aturat el
+expedient.termini.data.de.fi=Data de fi del termini
+expedient.termini.estat=Estat
+expedient.termini.estat.actiu=Actiu
+expedient.termini.estat.cancelat=Cancel·lat
+expedient.termini.estat.pendent=Pendent d'iniciar
+expedient.termini.estat.aturat=Aturat
+expedient.termini.accio.iniciar=Iniciar
+expedient.termini.accio.aturar=Aturar
+expedient.termini.accio.continuar=Continuar
+expedient.termini.accio.cancelar=Cancel·lar
+expedient.termini.accio.modificar=Modificar
+expedient.termini.modificar=Modificar termini
+expedient.termini.modificar.tipus=Tipus de modificació
+expedient.termini.data.inici=Data d'inici
+expedient.termini.data.fi=Data de fi
 expedient.eines.confirm_aturar_tramitacio=Estau segur que voleu aturar la tramitació d'aquest expedient?
 expedient.eines.confirm_reprendre_tramitacio=Estau segur que voleu reprendre la tramitació d'aquest expedient?
 expedient.eines.confirm_executar_script_proces=Estau segur que voleu executar aquest script en aquest procés?
@@ -234,6 +254,7 @@ info.termini.iniciat=El termini s'ha iniciat correctament
 info.termini.aturat=El termini s'ha aturat correctament
 info.termini.continuat=El termini s'ha continuat correctament
 info.termini.cancelat=El termini s'ha cancelat correctament
+info.termini.modificat=El termini s'ha modificat correctament
 
 info.tipus.exp.esborrat=El tipus d'expedient s'ha esborrat correctament
 info.defproc.marcat.inicial=La definició de procés '{0}' s'ha marcat com a inicial
