mid: 0000171 msg: Permetre reordenar els valos de les enumeracions
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.2@292 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
@@ -200,6 +200,7 @@ error.no.enumeracio.selec=No s'ha seleccionat cap enumeració
 error.enumeracio.codi.repetit=Ja existeix una enumeració amb aquest codi
 error.enumeracio.valor.codi.repetit=Ja existeix un valor amb aquest codi
 error.enumeracio.emprada.camp=Aquesta enumeració no es pot esborrar perquè està actualment en ús
+error.ordre.enumeracio=No s'ha pogut modificar l'ordre
 
 error.consulta.informe.nonhiha=Aquesta consulta no té configurat cap informe
 error.consulta.informe.nofiltre=Seleccioni primer una consulta
