--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
@@ -23,6 +23,7 @@ error.expedienttipus.sistra.mapeig.repetit=Ja existeix un altre mapeig en aquest
 error.mapeigSistra.canviVersio=S'ha produït un error realizant el procés de canvi de versió del mapeig amb Sistra
 error.expedient.titolrepetit=Ja existeix un expedient d'aquest tipus amb el mateix títol
 error.expedient.numerorepetit=Ja existeix un expedient d'aquest tipus amb el mateix número
+error.expedient.relacio.esborrar=Error al esborrar la relació de l'expedient
 error.camp.codi.char.nok=El codi no pot contenir punts
 error.camp.codi.maymin=El codi no pot començar amb una lletra majúscula i a continuació una minúscula
 error.camp.enumdom.buit=S'ha d'especificar una enumeració o un domini
@@ -73,6 +74,7 @@ error.ordre.camp.tasca=No s'ha pogut canviar l'ordre del camp
 
 error.permisos.disseny.entorn=No té permisos de disseny sobre aquest entorn
 error.exist.exp.defproc=Existeixen expedients amb aquesta definició de procés
+error.exist.exp.tipexp=Existeixen expedients amb aquest tipus
 error.arxius.no.valid=Aquest arxiu no és un arxiu d'exportació vàlid
 error.arxiu.importar=Error llegint l'arxiu a importar\: 
 error.import.dades=Error en la importaci\u00F3 de dades\: 
@@ -155,6 +157,7 @@ error.iniciar.termini=No s'ha pogut iniciar el termini
 error.aturar.termini=No s'ha pogut aturar el termini
 error.continuar.termini=No s'ha pogut continuar el termini
 error.cancelar.termini=No s'ha pogut cancelar el termini
+error.modificar.termini=No s'ha pogut modificar el termini
 
 error.permisos.disseny.tipus.exp=No té permisos de disseny sobre aquest tipus d'expedient
 error.esborrar.tipus.exp=No s'ha pogut esborrar el tipus d'expedient
@@ -197,6 +200,7 @@ error.no.enumeracio.selec=No s'ha seleccionat cap enumeració
 error.enumeracio.codi.repetit=Ja existeix una enumeració amb aquest codi
 error.enumeracio.valor.codi.repetit=Ja existeix un valor amb aquest codi
 error.enumeracio.emprada.camp=Aquesta enumeració no es pot esborrar perquè està actualment en ús
+error.ordre.enumeracio=No s'ha pogut modificar l'ordre
 
 error.consulta.informe.nonhiha=Aquesta consulta no té configurat cap informe
 error.consulta.informe.nofiltre=Seleccioni primer una consulta
