--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -1,4 +1,5 @@
 salutacio=Bon dia
+
 expedient.consulta.gis=Obre en visor GIS
 expedient.consulta.titol=T\u00EDtol
 expedient.consulta.numero=N\u00FAmero
@@ -22,6 +23,8 @@ expedient.consulta.informe=Mostrar informe
 expedient.consulta.trobats=Hi ha {0} expedients que coincideixen amb els criteris especificats
 expedient.consulta.trobatun=Hi ha un expedient que coincideix amb els criteris especificats
 expedient.consulta.notrobats=No hi ha cap expedient que coincideixi amb els criteris especificats
+expedient.consulta.confirm.esborrar=Estau segur que voleu esborrar aquest expedient?
+expedient.consulta.confirm.anular=Estau segur que voleu anul·lar aquest expedient?
 
 expedient.dada.afegir_dada=Afegir dada
 expedient.dada.select.variable=Seleccioni una variable
@@ -55,6 +58,26 @@ expedient.editar.entrada_num=Entrada núm.
 expedient.editar.responsable=Responsable
 expedient.editar.comentari=Comentari
 expedient.editar.estat=Estat
+expedient.termini.terminis=Terminis
+expedient.termini.nom=Nom
+expedient.termini.durada=Durada
+expedient.termini.iniciat.el=Iniciat el
+expedient.termini.aturat.el=Aturat el
+expedient.termini.data.de.fi=Data de fi del termini
+expedient.termini.estat=Estat
+expedient.termini.estat.actiu=Actiu
+expedient.termini.estat.cancelat=Cancel·lat
+expedient.termini.estat.pendent=Pendent d'iniciar
+expedient.termini.estat.aturat=Aturat
+expedient.termini.accio.iniciar=Iniciar
+expedient.termini.accio.aturar=Aturar
+expedient.termini.accio.continuar=Continuar
+expedient.termini.accio.cancelar=Cancel·lar
+expedient.termini.accio.modificar=Modificar
+expedient.termini.modificar=Modificar termini
+expedient.termini.modificar.tipus=Tipus de modificació
+expedient.termini.data.inici=Data d'inici
+expedient.termini.data.fi=Data de fi
 expedient.eines.confirm_aturar_tramitacio=Estau segur que voleu aturar la tramitació d'aquest expedient?
 expedient.eines.confirm_reprendre_tramitacio=Estau segur que voleu reprendre la tramitació d'aquest expedient?
 expedient.eines.confirm_executar_script_proces=Estau segur que voleu executar aquest script en aquest procés?
@@ -67,7 +90,8 @@ expedient.eines.script=Script
 expedient.eines.canviar_versio_proces=Canviar la versió del procés
 expedient.eines.canviar_versio=Canviar a la versió
 expedient.info.informacio=Informació de l'expedient
-expedient.info.confirm_accio=Estau segur que voleu executar aquesta acció?
+expedient.info.confirm.accio.executar=Estau segur que voleu executar aquesta acció?
+expedient.info.confirm.relacio.esborrar=Estau segur que voleu esborrar aquesta relació?
 expedient.info.identificacio=Identificació
 expedient.info.tipus=Tipus
 expedient.info.aturat=Aturat
@@ -83,6 +107,10 @@ expedient.info.numero_id_intern=Número identificatiu intern
 expedient.info.definicio_proces=Definició de procés
 expedient.info.situacio_actual=Situació actual
 expedient.info.executar_accio=Executar acció
+expedient.info.relacionats=Expedients relacionats
+expedient.info.relacionar.amb=Relacionar amb
+expedient.info.relacionar=Relacionar
+expedient.info.relacionar.afegir=Afegir expedient relacionat
 expedient.iniciar.disponibles=Expedients disponibles per iniciar
 expedient.iniciar.confirm_iniciar=Estau segur que voleu iniciar un nou expedient?
 expedient.iniciar.darrera_versio=Darrera versió
@@ -98,6 +126,8 @@ expedient.registre.valorVell=Valor antic
 expedient.registre.valorNou=Valor nou
 expedient.tasca.reassignar=Reassignar tasca
 expedient.tasca.expresio_assignacio=Expressió d'assignació
+expedient.relacionar.ok=L'expedient s'ha relacionat correctament
+expedient.relacio.esborrar.ok=La relació s'ha esborrat correctament
 
 
 comuns.georeferencia=Georeferència
@@ -224,6 +254,7 @@ info.termini.iniciat=El termini s'ha iniciat correctament
 info.termini.aturat=El termini s'ha aturat correctament
 info.termini.continuat=El termini s'ha continuat correctament
 info.termini.cancelat=El termini s'ha cancelat correctament
+info.termini.modificat=El termini s'ha modificat correctament
 
 info.tipus.exp.esborrat=El tipus d'expedient s'ha esborrat correctament
 info.defproc.marcat.inicial=La definició de procés '{0}' s'ha marcat com a inicial
@@ -455,6 +486,7 @@ common.tabsexptipus.integ_tram=Integració amb tràmits
 common.tabsexptipus.integ_forms=Integració amb forms
 common.tabsexptipus.enumeracions=Enumeracions
 common.tabsexptipus.dominis=Dominis
+common.tabsexptipus.consultes=Consultes
 
 common.tabstasca.confirmacio=Estau segur que voleu cancel·lar la delegació?
 common.tabstasca.heu_delegat=Heu delegat aquesta tasca
@@ -513,6 +545,7 @@ decorators.default.benvinguts=Benvinguts
 decorators.default.autenticat_amb=Autenticat actualment amb l'usuari
 decorators.default.sortir=Sortir
 decorators.default.usuari=Usuari
+decorators.default.cerca=Filtrar resultats
 
 decorators.entorn.entorn=Entorn
 decorators.entorn.permisos=Permisos
@@ -570,6 +603,7 @@ defproc.campform.camp_valor=Camp amb el valor
 defproc.campform.dades_accio=Dades de l'acció
 defproc.campform.selec_hand=Seleccioni un handler
 defproc.campform.handler=Handler
+defproc.campform.ocult=Ocult
 
 defproc.campllistat.confirmacio=Estau segur que voleu esborrar aquest registre?
 defproc.campllistat.validacions=Validacions
