mid: 0000182 msg: Tramitació massiva de tasques dels expedients
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.3@324 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
@@ -56,6 +56,8 @@ error.validacio=S'han produit errors de validació
 
 error.guardar.dades=No s'ha pogut guardar les dades
 error.esborrar.registre=No s'ha pogut esborrar el registre
+error.guardar.document=No s'ha pogut guardar el document
+error.esborrar.document=No s'ha pogut esborrar el document
 
 error.esborrar.camp.consulta=No s'ha pogut esborrar el camp de la consulta
 error.canviar.ordre.camp.consulta=No s'ha pogut canviar l'ordre del camp de la consulta
@@ -261,3 +263,6 @@ error.terminiService.noPausat=El termini no està pausat
 error.update.actualitzar.versio=No s'ha pogut actualitzar a la versió
 error.update.script.ko=L'script de base de dades no ha estat executat
 error.update.proces.ko=Contacti amb el seu administrador abans d'utilitzar l'aplicació.
+
+error.arxiu.no.valid=El format de l'arxiu no és correcte
+error.no.tasques.selec=Ha de seleccionar alguna tasca per a la tramitació massiva
