--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -297,6 +297,7 @@ txt.baixa=Baixa
 txt.m_baixa=Molt baixa
 info.tasca.disponible.personals=La tasca està disponible en el seu llistat de tasques personals
 info.tasca.completat=La tasca s'ha completat amb èxit
+info.tasca.completades=Totes les tasques s'han completat amb èxit
 
 info.tasca.delegada=La tasca ha estat delegada amb èxit
 info.delegacio.cancelat=La delegació s'ha cancel·lat correctament
@@ -500,6 +501,7 @@ common.tabstasca.supervisada=Supervisada
 common.tabstasca.cancelar=Cancel·lar delegació
 common.tabstasca.tasca=Tasca
 common.tabstasca.signatures=Signatures
+common.tabstasca.massiva.canvi=Modificar la selecció de tasques
 
 common.tabstasques.personals=Personals
 common.tabstasques.grup=Grup
@@ -696,6 +698,7 @@ defproc.tascaform.si_no_buit=Si no està buit s'evaluarà aquest script per obteni
 defproc.tascaform.recurs=Recurs amb el formulari
 defproc.tascaform.codi_form=Codi del formulari extern
 defproc.tascaform.delegableq=Delegable?
+defproc.tascaform.tramitacio.massiva=Tramitació massiva?
 
 defproc.tascallist.tasca_ini=Tasca inicial
 defproc.tascallist.signatures=Signatures
@@ -744,6 +747,12 @@ domini.form.url=URL
 domini.form.dades_sql=Dades connexió SQL
 domini.form.jndi=JNDI del datasource
 domini.form.sql=SQL
+domini.form.tipus.auth=Tipus d'autenticació
+domini.form.origen.creds=Origen de les credencials
+domini.form.usuari=Usuari
+domini.form.contrasenya=Contrasenya
+domini.form.prop.usuari=Propietat amb l'usuari
+domini.form.prop.contrasenya=Propietat amb la contrasenya
 
 domini.llistat.dominis=Dominis
 domini.llistat.confirmacio=Estau segur que voleu esborrar aquest domini?
@@ -994,6 +1003,7 @@ tasca.info.destinatari=Destinatari
 tasca.info.comentari=Comentari
 tasca.info.supervisarq=Supervisar?
 tasca.info.delegar=Delegar
+tasca.info.massiva=Tramitació massiva activada. Les modificacions es propagaran a múltiples tasques.
 
 tasca.pllistat.tasq_pendents=Tasques pendents
 tasca.pllistat.tasca=Tasca
@@ -1009,6 +1019,10 @@ tasca.pllistat.baixa=Baixa
 tasca.pllistat.m_baixa=Molt baixa
 tasca.pllistat.data_limit=Data límit&nbsp;
 tasca.pllistat.tasca_min=tasca
+tasca.pllistat.massiva=Tramitació massiva
+
+tasca.massiva.tramitacio=Tramitació massiva de tasques
+tasca.massiva.tramitar=Tramitar
 
 tasca.reg.guardar=Guardar
 
@@ -1025,6 +1039,13 @@ tasca.signa.signar=Signar
 tasca.signa.tipus_no_sup=Tipus de signatura no suportat
 tasca.signa.docs_marcats=Els documents marcats amb
 tasca.signa.son_sign_oblig=són de signatura obligatòria
+tasca.signa.camp.cert=Certificat per a signar
+tasca.signa.camp.passwd=Contrasenya del certificat
+tasca.signa.obtenint.certs=Obtenint certificats disponibles...
+tasca.signa.signar=Signar
+tasca.signa.alert.nosel=No s'ha seleccionat cap certificat per a signar
+tasca.signa.alert.error=Error al signar el document (comprovi la contrasenya)
+tasca.signa.alert.certerr=Error al obtenir la llista de certificats disponibles
 
 error.error=Error
 error.sa_produit=S'ha produït un error a l'aplicació
