mid: 0000202 msg: Posibilitat d'especificar l'extensió de sortida per a cada document generat amb plantilla
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-2.3@325 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
@@ -191,6 +191,7 @@ error.especificar.dest.delegacio=No ha especificat cap destinatari per a la dele
 error.tasca.no.disponible=Aquesta tasca ja no està disponible
 error.especificar.document=S'ha d'especificar un document
 error.especificar.data=S'ha d'especificar la data
+error.extensio.document=L'extensió d'aquest document no està permesa
 
 error.executar.accio=No s'ha pogut executar l'acció
 error.validar.formulari=No s'ha pogut validar el formulari
