--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -643,6 +643,9 @@ defproc.docform.codi_custodia=Codi per a la custòdia
 defproc.docform.tipus_doc=Tipus de document
 defproc.docform.codi_doc=Codi del document pel portasignatures
 defproc.docform.adj_auto=Adjuntar automàticament al generar
+defproc.docform.gen_ext=Extensió de sortida al generar
+defproc.docform.ext_perm=Extensions d'arxiu permeses
+defproc.docform.sep_comes=Separades per comes
 
 defproc.docllistat.confirmacio=Estau segur que voleu esborrar aquest registre?
 defproc.docllistat.es_plantillaq=És plantilla?
